modifying the src folder name

--- a/export_import_template_engine/savedsettings.cfg
+++ b/export_import_template_engine/savedsettings.cfg
@@ -4,7 +4,9 @@ hmc_user = pedebug
 
 [OPTIONS]
 cpcsel = 1
-flavor = 4
+flavor = 1
 partition_index = 1
 numparts = 1
+template = 1
+partitioncount = 3
 
